namespace Adapter.Interfaces
{
    public interface ITurkey
    {
        void Gobble();
        void Fly();
    }
}